# elpp-658

./: CMakeLists.txt  README.md
src/: easylogging++.cc  main.cpp
